// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Response Component should render snapshot when image is available 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-4 MuiGrid-grid-lg-3"
  >
    <button
      class="MuiButtonBase-root makeStyles-root-1"
      tabindex="0"
      type="button"
    >
      <div
        class="makeStyles-buttonContent-8"
      >
        <div
          class="makeStyles-imageContainer-2"
        >
          <img
            src="img.png"
          />
        </div>
        <div
          class="MuiGrid-root makeStyles-text-6 MuiGrid-container MuiGrid-wrap-xs-nowrap"
        >
          <div
            class="MuiGrid-root makeStyles-key-5 MuiGrid-item"
          >
            <p
              class="MuiTypography-root makeStyles-type-7 MuiTypography-body1 MuiTypography-colorInherit"
            />
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <p
              class="MuiTypography-root makeStyles-type-7 MuiTypography-body1 MuiTypography-colorInherit"
            >
              example text
            </p>
          </div>
        </div>
      </div>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`Response Component should render snapshot when image is not available 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
  >
    <button
      class="MuiButtonBase-root makeStyles-root-9"
      tabindex="0"
      type="button"
    >
      <div
        class="MuiBox-root MuiBox-root-13 makeStyles-key-10"
      />
      <div
        class="MuiBox-root MuiBox-root-14 makeStyles-text-12"
      >
        example text
      </div>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;
